--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Landing Page</title>
 </head>
 <body>
   <div class="banner-container">
-    <nav>
-      <h2>Header Logo</h2>
-      <div class="nav-link-container">
-        <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="max-width">
+      <nav>
+        <h2>Header Logo</h2>
+        <div class="nav-link-container">
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </div>
+      </nav>
 
-    <div>
-      <header>
-        <h1>This website is awesome</h1>
-        <p>Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
-      </header>
+      <div class="header-container">
+        <header>
+          <h1>This website is awesome</h1>
+          <p>Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button>Sign up</button>
+        </header>
 
-      <div>
-        <img src="./img/banner-img.png" alt="">
+        <div>
+          <img src="./img/banner-img.png" alt="">
+        </div>
       </div>
     </div>
   </div>
