--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="header-container">
         <header>
           <h1>This website is awesome</h1>
-          <p>Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <p class="header-p">Ths website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
           <button>Sign up</button>
         </header>
 
@@ -36,6 +36,29 @@
       </div>
     </div>
   </div>
+
+  <main>
+    <h2>Some random information</h2>
+    
+    <div class="features-container">
+      <div class="feature">
+        <img src="./img/fairy-fish.png" alt="">
+        <p class="feature-p">the is some subtext under an illustration or image</p>
+      </div>
+      <div class="feature">
+        <img src="./img/valva-fish.png" alt="">
+        <p class="feature-p">the is some subtext under an illustration or image</p>
+      </div class="feature">
+      <div class="feature">
+        <img src="./img/galacis-fish.png" alt="">
+        <p class="feature-p">the is some subtext under an illustration or image</p>
+      </div>
+      <div class="feature">
+        <img src="./img/diamond-fish.png" alt="">
+        <p class="feature-p">the is some subtext under an illustration or image</p>
+      </div>
+    </div>
+  </main>
   
 </body>
 </html>
