Add Call to action and Footer Section with Styling
Website layout and styling complete.
Added a gitignore for .DS mac file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <main>
     <h2>Some random information</h2>
-    
+
     <div class="features-container">
       <div class="feature">
         <img src="./img/fairy-fish.png" alt="">
@@ -59,6 +59,27 @@
       </div>
     </div>
   </main>
+
+  <section class="quote-section">
+    <div>
+      <p class="quote">“Cast your line, chase the thrill, and reel in adventure—every catch is a new story.”</p>
+      <p class="quote-name">from an old fisher</p>
+    </div>
+  </section>
+
+  <section class="call-to-action">
+      <div class="call-to-action-text-con">
+        <p class="call-strong"><strong class="call-text">Download game now!</strong></p>
+        <p class="call-text">Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <div class="call-to-action-button-con">
+        <button>Sign up</button>
+      </div>
+  </section>
+
+  <footer>
+    <p>Copyright ©️ The Odin Project 2021</p>
+  </footer>
   
 </body>
 </html>
