--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="banner-container">
     <div class="max-width">
       <nav>
-        <h2>Header Logo</h2>
+        <p class="logo">The Legendary Fisher</p>
         <div class="nav-link-container">
           <ul>
             <li><a href="#">header link one</a></li>
